--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
+    "@ant-design/nextjs-registry": "^1.0.0",
+    "@hookform/resolvers": "^3.3.4",
+    "antd": "^5.15.0",
     "dexie": "^3.2.5",
     "dexie-react-hooks": "^1.1.7",
     "next": "14.1.1",
     "next-pwa": "^5.6.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
